jackett/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  ports:
  - name: http
    port: 9117
  selector:
    app: jackett
