jackett/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackett
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: jackett.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: jackett
          servicePort: http
